# Kikkago

./: .gitignore  CMakeLists.txt  IBN-KIKKA-24.cpp  LICENSE  ascii.kikka  ascii2.kikka  henkamono.cpp  henkamono_test.cpp  kikka.cpp  kikka.xml  quine.kikka  Руководство Kikkago.docx
programs/: ascii.kikka  euclid.kikka  fi.kikka  fib.kikka  normdist.kikka  num2.kikka  prob.kikka  prob1.kikka  sum.kikka  test.kikka
